--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,3 @@
-
-
 # Button and LED library
 CONFIG_DK_LIBRARY=y
 
@@ -13,7 +11,7 @@ CONFIG_BT_MAX_CONN=1
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 CONFIG_MAIN_STACK_SIZE=2048
 
-#I2C
+# I2C
 CONFIG_I2C=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
@@ -26,6 +24,9 @@ CONFIG_SERIAL=n #added
 # CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
 # CONFIG_BT_CTLR_TX_PWR_0=y
 #CONFIG_BT_CTLR_TX_PWR_MINUS_40=y
-
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
+
+# LPS22 sensor
+CONFIG_SENSOR=y
+CONFIG_LPS22=y
