--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 # SPDX-License-Identifier: Apache-2.0
 
 cmake_minimum_required(VERSION 3.20.0)
@@ -9,9 +10,8 @@ zephyr_include_directories(.) # (inc)
 
 # NORDIC SDK APP START
 target_sources(app PRIVATE
-	src/main.c
-	src/LPS22.c
-	src/services/ble_shs.c
+src/main.c
+src/lps22.c
+src/services/ble_shs.c
 )
 
-# NORDIC SDK APP END
