--- a/prj.conf
+++ b/prj.conf
@@ -1,3 +1,4 @@
+
 # Button and LED library
 CONFIG_DK_LIBRARY=y
 
@@ -24,9 +25,11 @@ CONFIG_SERIAL=n #added
 # CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
 # CONFIG_BT_CTLR_TX_PWR_0=y
 #CONFIG_BT_CTLR_TX_PWR_MINUS_40=y
+
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
 
-# LPS22 sensor
+# LPS22 sensor configuration
 CONFIG_SENSOR=y
 CONFIG_LPS22=y
+
