--- a/prj.conf
+++ b/prj.conf
@@ -5,7 +5,7 @@ CONFIG_DK_LIBRARY=y
 # Bluetooth LE
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="droidecahedron_sensorhub"
+CONFIG_BT_DEVICE_NAME="TPMS nRF Dev"
 CONFIG_BT_MAX_CONN=1
 
 # Increase stack size for the main thread and System Workqueue
@@ -30,6 +30,6 @@ CONFIG_PM=y
 CONFIG_PM_DEVICE=y
 
 # LPS22 sensor configuration
-CONFIG_SENSOR=y
-CONFIG_LPS22=y
+#CONFIG_SENSOR=y
+#CONFIG_LPS22=y
 
