--- a/prj.conf
+++ b/prj.conf
@@ -17,8 +17,8 @@ CONFIG_I2C=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # Power savings if you disable these.
-CONFIG_LOG=n #changed
-CONFIG_SERIAL=n #added
+CONFIG_LOG=y #changed
+CONFIG_SERIAL=y #added
 #CONFIG_LOG_DEFAULT_LEVEL=0
 
 # tx power config examples. not all socs support all +/-, check your soc
@@ -30,6 +30,7 @@ CONFIG_PM=y
 CONFIG_PM_DEVICE=y
 
 # LPS22 sensor configuration
-#CONFIG_SENSOR=y
+CONFIG_SENSOR=y
 #CONFIG_LPS22=y
+
 
